apps/rollout/overlays/bluegreen/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: bluegreen
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: bluegreen
  template:
    metadata:
      labels:
        app: bluegreen
    spec:
      containers:
      - name: rollouts-demo
        image: argoproj/rollouts-demo:blue
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
  strategy:
    blueGreen:
      activeService: bluegreen-active
      previewService: bluegreen-preview
      autoPromotionEnabled: false
      # prePromotionAnalysis:
      #   templates:
      #   - templateName: smoke-tests
      #   args:
      #   - name: namespace
      #     value: rollouts-demo-prod
      #   - name: route-name
      #     value: bluegreen-preview
      #   - name: route-url
      #     value: bluegreen-preview-rollouts-demo-prod.${SUB_DOMAIN}
