apps/rollout/overlays/bluegreen/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bluegreen
spec:
  gateways:
  - bluegreen
  hosts:
  - bluegreen-rollouts-demo-prod.${SUB_DOMAIN}
  http:
  - name: primary
    route:
    - destination:
        host: bluegreen-active
        port:
          number: 8080
      weight: 100
  # tls:
  # - match:
  #   - port: 8080
  #     sniHosts:
  #     - bluegreen-vsvc.local
  #   route:
  #   - destination:
  #       host: bluegreen-active
  #     weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bluegreen-preview
spec:
  gateways:
  - bluegreen-preview
  hosts:
  - bluegreen-preview-rollouts-demo-prod.${SUB_DOMAIN}
  http:
  - name: primary
    route:
    - destination:
        host: bluegreen-preview
        port:
          number: 8080
      weight: 100
  # tls:
  # - match:
  #   - port: 8080
  #     sniHosts:
  #     - bluegreen-preview-vsvc.local
  #   route:
  #   - destination:
  #       host: bluegreen-preview
  #     weight: 100
